Fixed color theme color in dark mode invoice-app

--- a/invoice-app/src/app/app.component.scss
+++ b/invoice-app/src/app/app.component.scss
@@ -205,7 +205,7 @@
 }
 
 .btn-text {
-    color: var(--app-background);
+    color: var(--btn-text);
     line-height: 15px;
     letter-spacing: -0.25px;
     width: 30px;
