--- a/invoice-app/src/app/invoice-add-edit/invoice-add-edit.component.scss
+++ b/invoice-app/src/app/invoice-add-edit/invoice-add-edit.component.scss
@@ -111,9 +111,6 @@ form h3 {
     border-radius: 1.5rem;
 }
 
-.btn-text {
-    line-height: 50px;
-}
 
 .trash-can-item-btn {
     text-align: center;
