--- a/invoice-app/src/app/invoice-card/invoice-card.component.scss
+++ b/invoice-app/src/app/invoice-card/invoice-card.component.scss
@@ -38,6 +38,7 @@
 
 .invoice-due-date {
     color: var(--primary-font);
+    margin-bottom: 10px;
 }
 
 .invoice-due-date::before {
