--- a/invoice-app/src/styles/_variables.scss
+++ b/invoice-app/src/styles/_variables.scss
@@ -43,7 +43,9 @@
     --btn-background-edit: #ebecf3;
     --btn-background-delete: #ec5757;
     --btn-background-mark: #7c5dfa;
+    --btn-background-draft: #373b53;
 
     --btn-add: #f9fafe;
     --btn-add-hover: #dfe3fa;
+    --btn-text: #ffffff;
 }
